Добавлены названия страниц (<title>)

--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -2,6 +2,7 @@
 
 {% block login_form %}
     {% set user_authorised = user_authorised %}
+    {% set page_title = page_title %}
     <form class="form">
         <h1 style="text-align: center">Вход в аккаунт</h1>
         <div class="form-group">
