--- a/templates/registration_form.html
+++ b/templates/registration_form.html
@@ -2,6 +2,7 @@
 
 {% block registration_form %}
     {% set user_authorisation = user_authorisation %}
+    {% set page_title = page_title %}
     <form class="form">
         <h1 style="text-align: center">Регистрация</h1>
         <div class="form-group">
