--- a/templates/template.html
+++ b/templates/template.html
@@ -16,6 +16,7 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="static/css/form.css">
+    <title>{{ page_title }}</title>
 </head>
 
 <body background="static/images/Фон сайта.jpg" style="background-size: cover">
@@ -45,5 +46,6 @@
 </div>
 {% block registration_form %}{% endblock %}
 {% block login_form %}{% endblock %}
+</div>
 </body>
 </html>
