Добавлена страница с контентом.

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -11,7 +11,7 @@
                     <div class="card-body" style="color: white">
                         <h5 class="card-title">Основы работы в Adobe Photoshop</h5>
                         <p>Начало работы в фотошопе. Изучение панели инструментов. Базовые функции.</p>
-                        <a href="#" class="btn btn-outline-warning">Изучить</a>
+                        <a href="/tutorials" class="btn btn-outline-warning">Изучить</a>
                     </div>
                 </div>
             </div>
