--- a/templates/template.html
+++ b/templates/template.html
@@ -15,11 +15,15 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="static/css/form.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
     <title>{{ page_title }}</title>
 </head>
 
-<body background="static/images/Фон сайта.jpg" style="background-size: cover">
+{% if page_title != 'Туториалы' %}
+    <body background="static/images/Фон сайта.jpg" style="background-size: cover">
+{% else %}
+    <body style="background-color: #101010">
+{% endif %}
 <div class="container-fluid">
     <div class="row navbar navbar-dark" style="background-color: #202020; padding-bottom: 1.75%">
         {% if not user_authorised %}
@@ -46,6 +50,8 @@
 </div>
 {% block registration_form %}{% endblock %}
 {% block login_form %}{% endblock %}
+{% block content_page %}{% endblock %}
 </div>
+</body>
 </body>
 </html>
