--- a/templates/registration_form.html
+++ b/templates/registration_form.html
@@ -1,23 +1,29 @@
 {% extends "template.html" %}
 
 {% block registration_form %}
-    {% set user_authorisation = user_authorisation %}
     {% set page_title = page_title %}
-    <form class="form">
+    <form class="form" method="post" style="margin-top: 1%">
         <h1 style="text-align: center">Регистрация</h1>
         <div class="form-group">
             <label for="NicknameInput">Никнейм</label>
-            <input type="text" class="form-control" id="NicknameInput" style="font-size: 20px">
+            <input type="text" class="form-control" id="NicknameInput" name="nickname" style="font-size: 20px">
         </div>
         <div class="form-group">
             <label for="PasswordInput">Пароль</label>
-            <input type="password" class="form-control" id="PasswordInput" style="font-size: 20px">
+            <input type="password" class="form-control" id="PasswordInput" name="password" style="font-size: 20px">
         </div>
         <div class="form-group">
             <label for="PasswordInputRepeat">Введите пароль ещё раз</label>
-            <input type="password" class="form-control" id="PasswordInputRepeat" style="font-size: 20px">
+            <input type="password" class="form-control" id="PasswordInputRepeat" name="password_again" style="font-size: 20px">
+        </div>
+        <div class="form-group">
+            <label for="EmailAddress">Адрес электронной почты</label>
+            <input type="email" class="form-control" id="EmailAddress" name="email" style="font-size: 20px">
         </div>
         <br>
-        <button type="submit" class="btn btn-outline-success" style="font-size: 20px">Зарегистрироваться</button>
+        <p class="error_message">{{ error_message }}</p>
+        <button type="submit" class="btn btn-outline-success" name="registration_button" style="font-size: 20px">
+            Зарегистрироваться
+        </button>
     </form>
 {% endblock %}
