--- a/templates/content_page.html
+++ b/templates/content_page.html
@@ -3,18 +3,36 @@
 {% block content_page %}
     {% set page_title = page_title %}
     <div>
-        <h1 class="content-header">Основы работы в Adobe Photoshop</h1>
+        <h1 style="
+        text-align: center;
+        color: white;
+        margin: 5% 25% 8% 25%;
+        border: 1px solid blue;
+        border-radius: 15px;
+        padding-top: 1%;
+        padding-bottom: 1%;"
+        >{{ title }}</h1>
     </div>
     <div class="container-fluid">
         <div class="row">
-            {% for i in range(3) %}
-                <div class="col-md-4">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://www.youtube.com/embed/srsRU7qN22s"
-                                frameborder="0" allowfullscreen style="border: 2px solid yellow"></iframe>
-                    </div>
+            <div class="col-md-4">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe src='{{ link[0] }}'
+                            frameborder="0" allowfullscreen style="border: 2px solid yellow"></iframe>
                 </div>
-            {% endfor %}
+            </div>
+            <div class="col-md-4">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe src="{{ link[1] }}"
+                            frameborder="0" allowfullscreen style="border: 2px solid yellow"></iframe>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe src="{{ link[2] }}"
+                            frameborder="0" allowfullscreen style="border: 2px solid yellow"></iframe>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
